scrollbar and top nav styling fixes

--- a/styles/css/scrollBar.css
+++ b/styles/css/scrollBar.css
@@ -1,5 +1,5 @@
 *::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
     opacity: 0.35;
 	-webkit-transition: all 0.35s;
 	-moz-transition: all 0.35s;
@@ -8,15 +8,15 @@
 	transition: all 0.35s;
 }
 *::-webkit-scrollbar:hover {
-	width: 20px;
+	width: 10px;
 	opacity: 1;
 }
 *::-webkit-scrollbar:hover *::-webkit-scrollbar-thumb {
-    background: #69F0AE;
+    background: #512DA8;
 }
 *::-webkit-scrollbar-track {
 	background-color: #000; 
 } 
 *::-webkit-scrollbar-thumb {
-	background: #69F0AE;
+	background: #512DA8;
 }  
